addons/kyverno/policies/medtech-fhir_smart_app_authz-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: medtech-fhir_smart_app_authz
  annotations:
    rulehub.id: medtech.fhir_smart_app_authz
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: medtech.fhir_smart_app_authz: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
